--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "plop": "plop --plopfile generators/plopfile.js"
   },
   "dependencies": {
     "@nextui-org/react": "^2.4.6",
     "framer-motion": "^11.3.30",
     "next": "14.2.7",
+    "plop": "^4.0.1",
+    "pluralize": "^8.0.0",
     "react": "^18",
     "react-dom": "^18"
   },
